--- a/src/AppBundle/Resources/public/css/icons.css
+++ b/src/AppBundle/Resources/public/css/icons.css
@@ -26,3 +26,9 @@
 .icon-reaction:before {
 	content: "s";
 }
+.icon-eldersign:before {
+	content: "s";
+}
+.icon-lightning:before {
+	content: "s";
+}
