--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -186,11 +186,25 @@ div.tags span.tag:not(:first-child)::before {
 }
 .list-decks img {
 	height: 63px;
-	width: 45px;
+	width: 90px;
 }
 #tag_toggles button {
 	margin-bottom: 4px;
 	margin-right: 4px;
+}
+
+.deck-list-investigator-image {
+	width : 55px;
+	height : 50px;
+	background-position: 8% 40%;
+	background-repeat: no-repeat;
+	background-size: 130px auto;
+	border-radius: 5px;
+	bottom: 0;
+	height: 60px;
+	margin: auto;
+	width: 55px;
+	display: inline-block;
 }
 
 /********** NEW DECK **********/
