--- a/src/AppBundle/Resources/views/Search/display-list.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-list.html.twig
@@ -9,7 +9,11 @@
 <th>Faction</th>
 <th>Cost</th>
 <th>Type</th>
-<th>STR</th>
+<th>Will</th>
+<th>Lore</th>
+<th>Strength</th>
+<th>Agility</th>
+<th>Wild</th>
 <th>Traits</th>
 <th>Set</th>
 </tr>
@@ -24,7 +28,11 @@
 	<td data-th="Faction">{{ card.faction_name }}</td>
 	<td data-th="Cost">{{ card.cost }}</td>
 	<td data-th="Type" >{{ card.type_name }}</td>
-	<td data-th="STR">{{ card.strength }}</td>
+	<td data-th="Will">{{ card.will }}</td>
+	<td data-th="Lore">{{ card.lore }}</td>
+	<td data-th="Strength">{{ card.strength }}</td>
+	<td data-th="Agility">{{ card.agility }}</td>
+	<td data-th="Wild">{{ card.wild }}</td>
 	<td data-th="Traits">{{ card.traits }}</td>
 	<td data-th="Set">{{ card.pack_name }} {{ card.position }}</td>
 </tr>
