--- a/src/AppBundle/Resources/views/Search/searchform.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchform.html.twig
@@ -78,21 +78,9 @@
     </div>
     <div class="col-sm-4">
         <div class="form-group">
-			<label for="l">Loyal</label>
+			<label for="u">Unique</label>
 			<div>
-				<select class="form-control" name="l" id="l">
-					<option value="">any</option>
-					<option value="1">Yes</option>
-					<option value="0">No</option>
-				</select>
-			</div>
-		</div>
-    </div>
-    <div class="col-sm-4">
-        <div class="form-group">
-			<label for="m">Military</label>
-			<div>
-				<select class="form-control" name="m" id="m">
+				<select class="form-control" name="u" id="u">
 					<option value="">any</option>
 					<option value="1">Yes</option>
 					<option value="0">No</option>
@@ -116,22 +104,6 @@
 		</div>
 	</div>
     <div class="col-sm-4">
-    </div>
-    <div class="col-sm-4">
-        <div class="form-group">
-			<label for="g">Intrigue</label>
-			<div>
-				<select class="form-control" name="g" id="g">
-					<option value="">any</option>
-					<option value="1">Yes</option>
-					<option value="0">No</option>
-				</select>
-			</div>
-		</div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-sm-4">
         <div class="form-group">
 			<label for="k">Traits</label>
 			<div>
@@ -144,31 +116,8 @@
 			</div>
 		</div>
     </div>
-    <div class="col-sm-4">
-        <div class="form-group">
-			<label for="u">Unique</label>
-			<div>
-				<select class="form-control" name="u" id="u">
-					<option value="">any</option>
-					<option value="1">Yes</option>
-					<option value="0">No</option>
-				</select>
-			</div>
-		</div>
-    </div>
-    <div class="col-sm-4">
-        <div class="form-group">
-			<label for="p">Power</label>
-			<div>
-				<select class="form-control" name="p" id="p">
-					<option value="">any</option>
-					<option value="1">Yes</option>
-					<option value="0">No</option>
-				</select>
-			</div>
-		</div>
-    </div>
 </div>
+
 </fieldset>
 <fieldset>
 <legend>Numerics</legend>
@@ -188,13 +137,13 @@
     </div>
     <div class="col-sm-6">
         <div class="form-group">
-			<label for="n">Income</label>
+			<label for="w">Will</label>
 			<div class="row">
                 <div class="col-xs-4">
-                    <select name="no" id="no" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
+                    <select name="wo" id="wo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
                 <div class="col-xs-8">
-                    <input id="n" name="n" value="" class="form-control">
+                    <input id="w" name="w" value="" class="form-control">
                 </div>
 			</div>
 		</div>
@@ -216,13 +165,13 @@
     </div>
     <div class="col-sm-6">
         <div class="form-group">
-			<label for="v">Initiative</label>
+			<label for="l">Lore</label>
 			<div class="row">
                 <div class="col-xs-4">
-                    <select name="vo" id="vo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
+                    <select name="lo" id="lo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
                 <div class="col-xs-8">
-                    <input id="v" name="v" value="" class="form-control">
+                    <input id="l" name="l" value="" class="form-control">
                 </div>
 			</div>
 		</div>
@@ -244,13 +193,13 @@
     </div>
     <div class="col-sm-6">
         <div class="form-group">
-			<label for="b">Claim</label>
+			<label for="a">Agility</label>
 			<div class="row">
                 <div class="col-xs-4">
-                    <select name="bo" id="bo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
+                    <select name="ao" id="ao" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
                 <div class="col-xs-8">
-                    <input id="b" name="b" value="" class="form-control">
+                    <input id="a" name="a" value="" class="form-control">
                 </div>
 			</div>
 		</div>
@@ -261,13 +210,13 @@
     </div>
     <div class="col-sm-6">
         <div class="form-group">
-			<label for="h">Reserve</label>
+			<label for="x">XP</label>
 			<div class="row">
                 <div class="col-xs-4">
-                    <select name="ho" id="ho" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
+                    <select name="xo" id="xo" class="form-control"><option value=":">=</option><option value="<">&lt;</option><option value=">">&gt;</option></select>
                 </div>
                 <div class="col-xs-8">
-                    <input id="h" name="h" value="" class="form-control">
+                    <input id="x" name="x" value="" class="form-control">
                 </div>
 			</div>
 		</div>
