--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -40,7 +40,7 @@
           <a class="navbar-brand" href="{{ path('index') }}">
             <span class="icon icon-link-half-top"></span>
             <span class="icon icon-link-half-bottom"></span>
-            <span class="icon icon-power"></span> ArkhamDB
+            <span class="icon icon-eldersign"></span> ArkhamDB
           </a>
         </div>
         <div class="navbar-collapse collapse">
@@ -98,7 +98,6 @@
     <ul class="list-inline">
     <li><a href="{{ path('about') }}">About</a></li>
     <li><a href="{{ path('api_intro') }}">API</a></li>
-    <li><a href="{{ path('donators') }}">Donators</a> <span class="fa fa-gift donator" title="The Gracious Donator"></span></li>
     </ul>
 
     <p>
@@ -107,17 +106,13 @@
     <a href="https://reddit.com/user/kamalisk/" title="Reddit"><span class="fa fa-reddit"></span></a>
     <a href="mailto:s.arkhamdb@kamalisk.com" title="E-mail"><span class="fa fa-envelope"></span></a>
     </p>
-
+<!--
     <p>
     Please post bug reports and feature requests on <a href="https://github.com/Alsciende/thronesdb/issues">GitHub</a>
     </p>
-
+-->
     <p>
-    You may contribute by giving money on <a href="https://paypal.me/alsciende">Paypal</a>.
-    </p>
-
-    <p>
-    The information presented on this site about A Game of Thrones: The Card Game Second Edition, both literal and graphical, is copyrighted by Fantasy Flight Games.
+    The information presented on this site about Arkham Horro: The Card Game, both literal and graphical, is copyrighted by Fantasy Flight Games.
     This website is not produced, endorsed, supported, or affiliated with Fantasy Flight Games.
     </p>
 
