added deck requirement parser to deck validator helper

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -112,7 +112,7 @@
     </p>
 -->
     <p>
-    The information presented on this site about Arkham Horro: The Card Game, both literal and graphical, is copyrighted by Fantasy Flight Games.
+    The information presented on this site about Arkham Horror: The Card Game, both literal and graphical, is copyrighted by Fantasy Flight Games.
     This website is not produced, endorsed, supported, or affiliated with Fantasy Flight Games.
     </p>
 
