--- a/src/AppBundle/Resources/views/Admin/index.html.twig
+++ b/src/AppBundle/Resources/views/Admin/index.html.twig
@@ -5,11 +5,12 @@
 <h1>Admin Panel</h1>
 <h2>Game data management</h2>
 <ul>
+<li><a href="{{ path('admin_card') }}">Card list</a></li>
 <li><a href="{{ path('admin_type') }}">Type list</a></li>
+<li><a href="{{ path('admin_subtype') }}">SubType list</a></li>
 <li><a href="{{ path('admin_faction') }}">Faction list</a></li>
 <li><a href="{{ path('admin_cycle') }}">Cycle list</a></li>
 <li><a href="{{ path('admin_pack') }}">Pack list</a></li>
-<li><a href="{{ path('admin_card') }}">Card list</a></li>
 <li><a href="{{ path('admin_tournament') }}">Tournament list</a></li>
 </ul>
 <h2>Excel card data file</h2>
