--- a/src/AppBundle/Resources/views/Search/searchoptions.html.twig
+++ b/src/AppBundle/Resources/views/Search/searchoptions.html.twig
@@ -4,8 +4,7 @@
 	<option value="set"     {% if sort|default('name') == "set"     %}selected{% endif %}>Sort by Set</option>
 	<option value="faction" {% if sort|default('name') == "faction" %}selected{% endif %}>Sort by Faction</option>
 	<option value="type"    {% if sort|default('name') == "type"    %}selected{% endif %}>Sort by Type</option>
-	<option value="cost"    {% if sort|default('name') == "cost"    %}selected{% endif %}>Sort by Cost/Gold</option>
-	<option value="strength"{% if sort|default('name') == "strength"%}selected{% endif %}>Sort by Strength/Initiative</option>
+	<option value="cost"    {% if sort|default('name') == "cost"    %}selected{% endif %}>Sort by Cost</option>
 </select>
 </div>
 <div class="col-sm-4" style="margin-bottom:.5em">
