--- a/src/AppBundle/Resources/views/Search/display-list.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-list.html.twig
@@ -25,7 +25,7 @@
         <span class="icon icon-{{ card.type_code}} fg-{{ card.faction_code }}"></span>
 		<a href="{{ card.url }}" class="card-tip{% if card.available == false %} card-preview{% endif %}" data-code="{{ card.code }}">{{ card.name }}</a>
 	</td>
-	<td data-th="Faction">{{ card.faction_name }}</td>
+	<td data-th="Faction" class="fg-{{ card.faction_code }}">{{ card.faction_name }}</td>
 	<td data-th="Cost">{{ card.cost }}</td>
 	<td data-th="Type" >{{ card.type_name }}</td>
 	<td data-th="Will">{{ card.will }}</td>
