added xp display (needs icons)

--- a/src/AppBundle/Resources/views/Search/display-list.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-list.html.twig
@@ -22,8 +22,10 @@
 <tr class="{% if i%2==0 %}even{% else %}odd{% endif %}">
    {% set card = cards[i] %}
 	<td data-th="Name">
-        <span class="icon icon-{{ card.type_code}} fg-{{ card.faction_code }}"></span>
-		<a href="{{ card.url }}" class="card-tip{% if card.available == false %} card-preview{% endif %}" data-code="{{ card.code }}">{{ card.name }}</a>
+		<span class="icon icon-{{ card.type_code}} fg-{{ card.faction_code }}"></span>
+		<a href="{{ card.url }}" class="card-tip{% if card.available == false %} card-preview{% endif %}" data-code="{{ card.code }}">
+		{{ card.name }}</a>
+		{% if card.xp %}<span class="xp-{{ card.xp }}"> ({{ card.xp }})</span>{% endif %}
 	</td>
 	<td data-th="Faction" class="fg-{{ card.faction_code }}">{{ card.faction_name }}</td>
 	<td data-th="Cost">{{ card.cost }}</td>
