updated about page

--- a/src/AppBundle/Resources/views/Default/about.html.twig
+++ b/src/AppBundle/Resources/views/Default/about.html.twig
@@ -14,9 +14,7 @@
 
 <p>I would like to thank especially:</p>
 <ul>
-    <li>SP for providing the domain name</li>
-    <li>The Crazy Bear-Riders for testing before release, especially mplain and alexmonk</li>
-    <li><a href="http://agotgame.com/en">agotgame</a> for the idea of the color-coded type icons</li>
+    <li>Alsciende for making a great framework for deck builders</li>
 </ul>
 
 </div>
