added xp search updated survival color

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -334,6 +334,7 @@ div.site-slogan {
 }
 .bg-survivor {
 	background-color: #f33832 !important;
+	color: white !important;
 }
 .bg-seeker {
 	background-color: #ff8f3f !important;
