updated json import/export set image path back to values ready for import

--- a/src/AppBundle/Resources/public/css/bootstrap.css
+++ b/src/AppBundle/Resources/public/css/bootstrap.css
@@ -3694,7 +3694,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   }
 }
 .navbar-default {
-  background-color: #f1f1d4;
+  background-color: #bcb790;
   border-color: #03ab0c;
 }
 .navbar-default .navbar-brand {
