--- a/src/AppBundle/Resources/public/css/icons.css
+++ b/src/AppBundle/Resources/public/css/icons.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'thronesdb';
-	src:url('../fonts/font3933.eot?irjt2b');
-	src:url('../fonts/font3933.eot?#iefixirjt2b') format('embedded-opentype'),
-		url('../fonts/font3933.ttf?irjt2b') format('truetype'),
-		url('../fonts/font3933.woff?irjt2b') format('woff'),
-		url('../fonts/font3933.svg?irjt2b#thronesdb') format('svg');
+	src:url('../fonts/arkham.eot?irjt2b');
+	src:url('../fonts/arkham.eot?#iefixirjt2b') format('embedded-opentype'),
+		url('../fonts/arkham.ttf?irjt2b') format('truetype'),
+		url('../fonts/arkham.woff?irjt2b') format('woff'),
+		url('../fonts/arkham.svg?irjt2b#thronesdb') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -24,11 +24,33 @@
 }
 
 .icon-reaction:before {
-	content: "s";
+	content: "r";
+	font-size: 1.1em;
 }
 .icon-eldersign:before {
-	content: "s";
+	content: "e";
 }
 .icon-lightning:before {
+	content: "!";
+}
+.icon-action:before {
+	content: ">";
+}
+.icon-strength:before {
 	content: "s";
+}
+.icon-agility:before {
+	content: "a";
+}
+.icon-will:before {
+	content: "w";
+}
+.icon-lore:before {
+	content: "l";
+}
+.icon-wild:before {
+	content: "?";
+}
+.icon-unique:before {
+	content: "u";
 }
