--- a/src/AppBundle/Resources/views/Search/display-list.html.twig
+++ b/src/AppBundle/Resources/views/Search/display-list.html.twig
@@ -10,10 +10,7 @@
 <th>Cost</th>
 <th>Type</th>
 <th>Will</th>
-<th>Lore</th>
-<th>Strength</th>
-<th>Agility</th>
-<th>Wild</th>
+<th>Stats / Icons</th>
 <th>Traits</th>
 <th>Set</th>
 </tr>
@@ -30,11 +27,20 @@
 	<td data-th="Faction" class="fg-{{ card.faction_code }}">{{ card.faction_name }}</td>
 	<td data-th="Cost">{{ card.cost }}</td>
 	<td data-th="Type" >{{ card.type_name }}</td>
-	<td data-th="Will">{{ card.will }}</td>
-	<td data-th="Lore">{{ card.lore }}</td>
-	<td data-th="Strength">{{ card.strength }}</td>
-	<td data-th="Agility">{{ card.agility }}</td>
-	<td data-th="Wild">{{ card.wild }}</td>
+	<td data-th="Stats">
+	{% if card.type_code == "investigator" %}
+	{% if card.will %}<span title="Will" class="icon icon-will color-will"></span>{{ card.will }}{% endif %}
+	{% if card.lore %}<span title="Lore" class="icon icon-lore color-lore"></span>{{ card.lore }}{% endif %}
+	{% if card.strength %}<span title="Strength" class="icon icon-strength color-strength"></span>{{ card.strength }}{% endif %}
+	{% if card.agility %}<span title="Agility" class="icon icon-agility color-agility"></span>{{ card.agility }}{% endif %}
+	{% else %}
+	{% if card.will %}{% for i in 1..card.will %}<span title="Will" class="icon icon-will color-will"></span>{% endfor %}{% endif %}
+	{% if card.lore %}{% for i in 1..card.lore %}<span title="Lore" class="icon icon-lore color-lore"></span>{% endfor %}{% endif %}
+	{% if card.strength %}{% for i in 1..card.strength %}<span title="Strength" class="icon icon-strength color-strength"></span>{% endfor %}{% endif %}
+	{% if card.agility %}{% for i in 1..card.agility %}<span title="Agility" class="icon icon-agility color-agility"></span>{% endfor %}{% endif %}
+	{% if card.wild %}{% for i in 1..card.wild %}<span title="Wild" class="icon icon-wild color-wild"></span>{% endfor %}{% endif %}
+	{% endif %}
+	</td>
 	<td data-th="Traits">{{ card.traits }}</td>
 	<td data-th="Set">{{ card.pack_name }} {{ card.position }}</td>
 </tr>
