updated card info

--- a/src/AppBundle/Resources/public/css/icons.css
+++ b/src/AppBundle/Resources/public/css/icons.css
@@ -56,17 +56,17 @@
 }
 
 .color-will {
-	color : #5F00dF;
+	color : #003961;
 }
 .color-lore {
-	color : #bF00bF;
+	color : #4e1a45;
 }
 .color-strength {
-	color : #aF404F;
+	color : #661e09;
 }
 .color-agility {
-	color : #1F701F;
+	color : #00543a;
 }
 .color-wild {
-	color : #aFaF3F;
+	color : #635120;
 }
