--- a/src/AppBundle/Resources/views/Search/card-faction.html.twig
+++ b/src/AppBundle/Resources/views/Search/card-faction.html.twig
@@ -1,4 +1,4 @@
 <div class="card-faction">
 	<span class="icon-{{ card.faction_code }} fg-{{ card.faction_code }}"></span>
-	<span class="card-faction">{{ card.faction_name }}</span>.
+	<span class="card-faction">{{ card.faction_name }}</span>
 </div>
