fixed export to text. disabled octgn for now. updated some display.

--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -47,7 +47,7 @@
 						</button>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="{{ path('deck_export_text', {deck_id:deck_id}) }}">Text file</a></li>
-							<li><a href="{{ path('deck_export_octgn', {deck_id:deck_id}) }}">Octgn file</a></li>
+							<!-- Disabled for now until someone makes an octgn thing <li><a href="{{ path('deck_export_octgn', {deck_id:deck_id}) }}">Octgn file</a></li> -->
 						</ul>
 					</div>
 				</div>
