--- a/src/AppBundle/Resources/views/Export/octgn.xml.twig
+++ b/src/AppBundle/Resources/views/Export/octgn.xml.twig
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <deck game="30c200c9-6c98-49a4-a293-106c06295c05" sleeveid="0">
-  <section name="Faction" shared="False">
-    <card qty="1" id="{{ deck.faction.octgnId }}">{{ deck.faction.name }}</card>
+  <section name="Investigator" shared="False">
+    <card qty="1" id="{{ deck.investigator.octgnId }}">{{ deck.faction.name }}</card>
   </section>
   <section name="Agenda" shared="False">
 {% if deck.agenda is not null %}
