--- a/src/AppBundle/Resources/views/Export/plain.txt.twig
+++ b/src/AppBundle/Resources/views/Export/plain.txt.twig
@@ -1,8 +1,6 @@
 {{ deck.name }}
 
-{{ deck.faction.name }}
-{% if deck.agenda %}{{ deck.agenda.name }}{% endif %}
-
+{% if deck.investigator %}{{ deck.investigator.name }}{% endif %}
 
 {% set first_pack = deck.included_packs|first %}
 {% set last_pack = deck.included_packs|last %}
@@ -12,40 +10,32 @@ From {{ first_pack.pack.name }}{% if first_pack.nb > 1 %} ({{ first_pack.nb }}){
 {{ first_pack.pack.name }}{% if first_pack.nb > 1 %} ({{ first_pack.nb }}){% endif %}
 {% endif %}
 
+{% set assets = deck.slots_by_type.asset %}
+Asset{% if assets|length > 1 %}s{% endif %}
 
-{% set plots = deck.slots_by_type.plot %}
-Plot{% if plots|length > 1 %}s{% endif %}
-
-{% for slot in plots %}
-{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.name }})
-{% endfor %}
-
-{% set characters = deck.slots_by_type.character %}
-Character{% if characters|length > 1 %}s{% endif %}
-
-{% for slot in characters %}
-{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.name }})
-{% endfor %}
-
-{% set locations = deck.slots_by_type.location %}
-Location{% if locations|length > 1 %}s{% endif %}
-
-{% for slot in locations %}
-{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.name }})
-{% endfor %}
-
-{% set attachments = deck.slots_by_type.attachment %}
-Attachment{% if attachments|length > 1 %}s{% endif %}
-
-{% for slot in attachments %}
-{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.name }})
+{% for slot in assets %}
+{{ slot.quantity }}x {{ slot.card.name }}{% if slot.card.xp %}[{{slot.card.xp}}]{% endif %} ({{ slot.card.pack.name }})
 {% endfor %}
 
 {% set events = deck.slots_by_type.event %}
-Event{% if events|length > 1 %}s{% endif %}
+Event{% if assets|length > 1 %}s{% endif %}
 
 {% for slot in events %}
-{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.name }})
+{{ slot.quantity }}x {{ slot.card.name }}{% if slot.card.xp %}[{{slot.card.xp}}]{% endif %} ({{ slot.card.pack.name }})
+{% endfor %}
+
+{% set skills = deck.slots_by_type.skill %}
+Skill{% if assets|length > 1 %}s{% endif %}
+
+{% for slot in skills %}
+{{ slot.quantity }}x {{ slot.card.name }}{% if slot.card.xp %}[{{slot.card.xp}}]{% endif %} ({{ slot.card.pack.name }})
+{% endfor %}
+
+{% set treachery = deck.slots_by_type.treachery %}
+Treachery{% if assets|length > 1 %}s{% endif %}
+
+{% for slot in treachery %}
+{{ slot.quantity }}x {{ slot.card.name }}{% if slot.card.xp %}[{{slot.card.xp}}]{% endif %} ({{ slot.card.pack.name }})
 {% endfor %}
 
 {{ footer|default('') }}
