encounter updates. prevent viewing of encounters mostly

--- a/src/AppBundle/Resources/views/Admin/index.html.twig
+++ b/src/AppBundle/Resources/views/Admin/index.html.twig
@@ -11,6 +11,7 @@
 <li><a href="{{ path('admin_faction') }}">Faction list</a></li>
 <li><a href="{{ path('admin_cycle') }}">Cycle list</a></li>
 <li><a href="{{ path('admin_pack') }}">Pack list</a></li>
+<li><a href="{{ path('admin_encounter') }}">Encounter list</a></li>
 <li><a href="{{ path('admin_tournament') }}">Tournament list</a></li>
 </ul>
 <h2>Excel card data file</h2>
