--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -152,7 +152,7 @@
 	});
     </script>
 
-	{% if app.environment != 'prod' %}
+	{% if app.environment == 'prod' %}
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 		{% include 'AppBundle:Default:google-analytics.html.twig' %}
 	{% endif %}
